<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FirstFragment">


    <Button
        android:id="@+id/button_authorities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorities"
        app:layout_constraintBottom_toTopOf="@+id/button_paginated_authorities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_paginated_authorities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paginated_authorities"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_flow_authorities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flow_authorities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_paginated_authorities" />

</androidx.constraintlayout.widget.ConstraintLayout>